feat: implemented lyne-teaser-thumbnail

--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -162,3 +162,10 @@
     color: var(--sbb-color-metal-default);
   }
 }
+
+@mixin clampLines($lines) {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: $lines;
+}
