chore: add mq mixin for hover-capable devices

--- a/src/components/lyne-button/styles/lyne-button.component.scss
+++ b/src/components/lyne-button/styles/lyne-button.component.scss
@@ -142,7 +142,8 @@
   }
 }
 
-@media (hover: hover) {
+// If the the device can hover over elements with ease
+@include hover-mq($hover: true) {
   .button:hover:not(:disabled) {
     @include buttonHover;
   }
