--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -35,18 +35,21 @@
 
   transition: var(--card-hover-animation);
 
-  &:focus,
-  &:hover {
-    &:not(:disabled) {
+  // If the the device can hover over elements with ease
+  @include hover-mq($hover: true) {
+      &:focus,
+      &:hover {
+        &:not(:disabled) {
 
-      @include shadow-level-9-hard;
+          @include shadow-level-9-hard;
 
-      padding-top: calc(var(--card-padding-top) - var(--card-hover-shift));
-      padding-bottom: calc(var(--card-padding-bottom) + var(--card-hover-shift));
+          padding-top: calc(var(--card-padding-top) - var(--card-hover-shift));
+          padding-bottom: calc(var(--card-padding-bottom) + var(--card-hover-shift));
 
-      cursor: pointer;
+          cursor: pointer;
+        }
+      }
     }
-  }
 
   @include ifForcedColors {
     border: pxToRem(1) solid ButtonText;
