fix: put card :focus style out of hover mq

--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -35,9 +35,20 @@
 
   transition: var(--card-hover-animation);
 
+  &:focus {
+    &:not(:disabled) {
+
+      @include shadow-level-9-hard;
+
+      padding-top: calc(var(--card-padding-top) - var(--card-hover-shift));
+      padding-bottom: calc(var(--card-padding-bottom) + var(--card-hover-shift));
+
+      cursor: pointer;
+    }
+  }
+
   // If the the device can hover over elements with ease
   @include hover-mq($hover: true) {
-      &:focus,
       &:hover {
         &:not(:disabled) {
 
