refactor: lyne-alert to sbb-alert

--- a/src/components/sbb-alert/styles/sbb-alert.default.scss
+++ b/src/components/sbb-alert/styles/sbb-alert.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "./lyne-alert.component.scss";
+@import "src/components/sbb-alert/styles/sbb-alert.component";
 
 // Mode overrides/tests
 // :host {
