--- a/src/components/sbb-alert/styles/sbb-alert.shared.scss
+++ b/src/components/sbb-alert/styles/sbb-alert.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "./lyne-alert.component.scss";
+@import "src/components/sbb-alert/styles/sbb-alert.component";
 
 // Mode overrides/tests
 // :host {
