feat: fix tabindex, z-index handler, added docs, bugfix and renaming for 'animated' prop

--- a/src/components/lyne-toast/styles/lyne-toast.component.scss
+++ b/src/components/lyne-toast/styles/lyne-toast.component.scss
@@ -26,6 +26,7 @@
   width: 100vw;
   height: 100vh;
   contain: content;
+  pointer-events: none;
 }
 
 .toast {
@@ -84,6 +85,7 @@
   @include text-s--regular;
   margin-left: auto;
   cursor: pointer;
+  pointer-events: all;
 }
 
 .toast-link {
