feat(link): add new inline variant

--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -140,6 +140,14 @@
   font-size: inherit;
 }
 
+@mixin text-inherit {
+  font-family: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  letter-spacing: inherit;
+  font-size: inherit;
+}
+
 // ----------------------------------------------------------------------------------------------------
 // Typo: Font Smoothing Mixins
 // ----------------------------------------------------------------------------------------------------
