--- a/src/components/sbb-tab-group/styles/sbb-tab-group.default.scss
+++ b/src/components/sbb-tab-group/styles/sbb-tab-group.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "./lyne-tab-amount.component.scss";
+@import "./sbb-tab-group.component.scss";
 
 // Mode overrides/tests
 // :host {
