--- a/src/components/sbb-tab-group/styles/sbb-tab-group.shared.scss
+++ b/src/components/sbb-tab-group/styles/sbb-tab-group.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "./lyne-tab-group.component.scss";
+@import "./sbb-tab-group.component.scss";
 
 // Mode overrides/tests
 // :host {
