--- a/src/components/sbb-tab-amount/styles/sbb-tab-amount.shared.scss
+++ b/src/components/sbb-tab-amount/styles/sbb-tab-amount.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "./lyne-tab-amount.component.scss";
+@import "./sbb-tab-amount.component.scss";
 
 // Mode overrides/tests
 // :host {
