feat: updated design-tokens library

--- a/src/global/core/shared/variables.scss
+++ b/src/global/core/shared/variables.scss
@@ -1,5 +1,5 @@
 @mixin lyne-components-css-vars {
-  // Grab css vars defined by `lyne-design-tokens` npm package
+  // Grab css vars defined by `@sbb-esta/lyne-design-tokens` npm package
   @extend %lyne-design-tokens-css-variables;
 
   --lyne-font-default-color: var(--color-charcoal-default);
