--- a/src/global/mediaqueries.scss
+++ b/src/global/mediaqueries.scss
@@ -1,6 +1,6 @@
 // Inspired by: https://github.com/sass-mq/sass-mq
 
-@import './node_modules/lyne-design-tokens/dist/scss/variables.scss';
+@import './node_modules/@sbb-esta/lyne-design-tokens/dist/scss/variables.scss';
 
 $mq-breakpoints: (
   zero: $breakpoint-zero-min, // 0
